# granola

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  crontab  go.mod  go.sum  main.go  pyproject.toml  setup.py
.build-venv/: pyvenv.cfg
.build-venv-fresh/: pyvenv.cfg
cmd/: export.go  notes.go  path.go  path_test.go  root.go  root_test.go  transcripts.go
internal/api/: document.go  document_test.go  token.go  token_test.go
internal/cache/: reader.go
internal/converter/: converter.go  converter_test.go
internal/formatter/: combined.go
internal/prosemirror/: prosemirror.go  prosemirror_test.go
internal/sync/: writer.go
internal/transcript/: formatter.go  writer.go
internal/writer/: writer.go  writer_test.go
macos/: Granola.icns  Wholesail.icns
scripts/: build_macos_app.sh  make_icns.sh
src/granola/: __init__.py  __main__.py  sync_config.py
src/granola/api/: __init__.py  auth.py  client.py  models.py
src/granola/cache/: __init__.py  reader.py
src/granola/cli/: __init__.py  export.py  main.py  notes.py  transcripts.py
src/granola/config/: __init__.py  settings.py
src/granola/formatters/: __init__.py  combined.py  markdown.py  transcript.py
src/granola/menubar/: README.md  __init__.py  app.py  launchd.py  preferences_window.py  settings.py  settings_panel.py  settings_store.py  webhook_panel.py
src/granola/prosemirror/: __init__.py  converter.py
src/granola/utils/: __init__.py  filename.py  paths.py
src/granola/webhooks/: __init__.py  client.py  dispatcher.py  history.py  models.py
src/granola/writers/: __init__.py  file_writer.py  sync_writer.py
tests/: __init__.py
